arreglando la clase Queue y terminando el ejercicio 2 practica 3