@@ -1,56 +1,42 @@
 package TP1.EJ8;
 
-import java.util.LinkedList;
-import java.util.List;
+import java.util.*;
 
-public class Queue<T> extends Secuence{
-    List<T> data;
-    public Queue(){
-        this.data= new LinkedList<T>();
+public class Queue <T> extends Secuence {
+    protected List<T> data;
+
+    public Queue() {
+        this.data = new ArrayList<T>();
     }
-    public void enqueue(T dato){
+
+    public void enqueue(T dato) {
         data.add(dato);
     }
-    public T dequeue(){
-        return data.removeFirst();
+
+    public T dequeue() {
+        return data.remove(0);
     }
-    public T head(){
-        return data.getFirst();
+
+    public T head() {
+        return data.get(0);
     }
-    public String toString(){
-        String str ="[";
-        for(T d:data)
-            str = str + d + ", ";
-        str+= "]";
+
+    @Override
+    public int size() {
+        return data.size();
+    }
+
+    @Override
+    public boolean isEmpty() {
+        return data.size() == 0;
+    }
+
+    @Override
+    public String toString() {
+        String str = "[";
+        for(T d: data)
+            str = str + d +", ";
+        str = str.substring(0, str.length()-2)+"]";
         return str;
     }
-    @Override public boolean isEmpty(){
-        if (data.size()==0){
-            return true;
-        }
-        return false;
-    }
-    public static void main(String[] args) {
-        Queue<Integer> queue = new Queue<>();
-
-        System.out.println("Cola vacía: " + queue);
-
-        queue.enqueue(10);
-        queue.enqueue(20);
-        queue.enqueue(30);
-
-        System.out.println("Después de agregar elementos: " + queue);
-
-        System.out.println("Primer elemento (head): " + queue.head());
-
-        queue.dequeue();
-        System.out.println("Después de dequeue(): " + queue);
-
-        queue.dequeue();
-        queue.dequeue();
-
-
-        System.out.println("¿Está vacía?: " + queue.isEmpty());
-    }
 }
-
